--- a/keyboards/crkbd/keymaps/dklb/todo.txt
+++ b/keyboards/crkbd/keymaps/dklb/todo.txt
@@ -1,3 +1,6 @@
 bug: double tapping any top row key in the Raise layer (Symbols) opens iterm. (Only happens when hotkey is set to doubletap shift, not when it's ctrl)
 Add Tap-Dance KC_LSFT -> KC_CAPS
 fix up LED lighting settings
+
+##to flash:
+##	qmk flash -kb crkbd/rev1/common -km dklb
