match keymap to Corne:dklb. Adjust layer isn't working

--- a/keyboards/reviung41/keymaps/dklb/todo.txt
+++ b/keyboards/reviung41/keymaps/dklb/todo.txt
@@ -1,2 +1,3 @@
 Edit keymap to approximate corne:dklb.
 flash command is "make reviung41:dklb:dfu" and needs to be run from ~/Code/qmk_...
+Adjust layer isn't accessible for some reason.
